--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -1,4 +1,13 @@
+#
+# Automatically generated file; DO NOT EDIT.
+# Linux/arm64 4.9.291 Kernel Configuration
+#
+CONFIG_ARM64=y
+CONFIG_64BIT=y
+CONFIG_SWAP=n
+
 CONFIG_LOCALVERSION="-perf"
+CONFIG_LOCALVERSION_AUTO=n
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
@@ -662,3 +671,9 @@ CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
 CONFIG_WCD_SPI_AC=y
 CONFIG_MACH_XIAOMI_D5X=y
+
+#
+# Xiaomi configuration options
+#
+CONFIG_MACH_XIAOMI=y
+CONFIG_MACH_XIAOMI_SDM845=y
