--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -1894,9 +1894,9 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_FORCE=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI_HID_I2C_FORCE is not set
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_FORCE is not set
 # CONFIG_TOUCH_DEBUG_FS is not set
-CONFIG_TOUCHSCREEN_FTS=y
+# CONFIG_TOUCHSCREEN_FTS
 # CONFIG_TOUCHSCREEN_FTS_POWER_SUPPLY is not set
-CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
+# CONFIG_TOUCHSCREEN_FTS_DIRECTORY
 # CONFIG_TOUCHSCREEN_FT5X46 is not set
 # CONFIG_TOUCHSCREEN_FT5X46_I2C is not set
 # CONFIG_TOUCHSCREEN_FT5X46_SPI is not set
