--- a/arch/arm64/boot/dts/qcom/sdm845.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdm845.dtsi
@@ -511,6 +511,14 @@
 				        fsmgr_flags = "wait";
 				        status = "ok";
 			        };
+			        system_ext {
+				        compatible = "android,system_ext";
+				        dev = "/dev/block/platform/soc/1d84000.ufshc/by-name/cust";
+				        type = "ext4";
+				        mnt_flags = "ro,barrier=1,discard";
+				        fsmgr_flags = "wait";
+				        status = "ok";
+			        };
 				vendor {
 					compatible = "android,vendor";
 					dev = "/dev/block/platform/soc/1d84000.ufshc/by-name/vendor";
