--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -217,4 +217,7 @@ source "drivers/gps/Kconfig"
 source "drivers/halls/Kconfig"
 
 source "drivers/kernelsu/Kconfig"
+
+source "drivers/dts_eagle/Kconfig"
+
 endmenu
