--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -673,6 +673,10 @@ CONFIG_MACH_XIAOMI_D5X=y
 CONFIG_MACH_XIAOMI=y
 CONFIG_MACH_XIAOMI_SDM845=y
 
+CONFIG_INPUT_HBTP_INPUT=y
+CONFIG_ZRAM_WRITEBACK=y
+CONFIG_AINUR_DTS_SW=y
+
 # 64Bit
 CONFIG_ARM64=y
 CONFIG_64BIT=y
