--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -184,3 +184,4 @@ obj-$(CONFIG_TEE)		+= tee/
 obj-$(CONFIG_BCM_GPS_SPI_DRIVER) += gps/
 obj-$(CONFIG_HALLS)		+= halls/
 obj-$(CONFIG_KSU) += kernelsu/
+obj-$(CONFIG_AINUR_DTS_SW) += dts_eagle/
