--- a/arch/arm64/configs/polaris_defconfig
+++ b/arch/arm64/configs/polaris_defconfig
@@ -676,6 +676,7 @@ CONFIG_MACH_XIAOMI_SDM845=y
 CONFIG_INPUT_HBTP_INPUT=y
 CONFIG_ZRAM_WRITEBACK=y
 CONFIG_AINUR_DTS_SW=y
+CONFIG_FORCE_FAST_CHARGE=y
 
 # 64Bit
 CONFIG_ARM64=y
